# openmetadata-dbt-demo

./: .gitignore  CLAUDE.md  README.md  justfile  run.sh  seal-secrets.sh
dags/: dbt_tpch_dag.py  test_dag.py  tpch_dbt_dag.py
demo-landing/: .dockerignore  Cargo.toml  Dockerfile  README.md
demo-landing/assets/: layout.html  styles.css
demo-landing/src/: auth.rs  forgejo.rs  kube.rs  main.rs  render.rs  routes.rs  template.rs
docker/airflow/: Dockerfile
docs/plans/: 2026-03-14-garagefs-airflow-s3.md  2026-03-14-openmetadata-trino-integration-design.md  2026-03-15-dbt-metadata-to-openmetadata-design.md  2026-03-18-argocd-application-organization.md
infrastructure/: argo-cd.yaml  cluster-apps.yaml  discover-node-ip.yaml  forgejo.yaml  keycloak-operator.yaml  keycloak.yaml  project.yaml  sealed-secrets.yaml  stack.yaml  stackable-operators-appset.yaml  stackable-operators.yaml
infrastructure/argocd-oidc-manifests/: configure-argocd-oidc.yaml
infrastructure/forgejo-manifests/: configure-forgejo-oidc.yaml  configure-forgejo.yaml  forgejo-admin-secret.yaml  forgejo-http-nodeport.yaml
infrastructure/keycloak-manifests/: configure-keycloak.yaml  discover-node-ip.yaml  keycloak-db-credentials.yaml  keycloak.yaml  nodeport.yaml  sealed-keycloak-bootstrap-admin.yaml  sealed-keycloak-demo-passwords.yaml
infrastructure/sealed-secrets-manifests/: sealed-secrets-key.yaml
platform/applications/: airflow-init.yaml  airflow-openmetadata.yaml  airflow-postgres.yaml  airflow.yaml  argocd-nodeport.yaml  (+28 more)
tofu/: main.tf  terraform.tfvars.template
website/: index.md
(+145 files in other folders)
